cmd/innovation-minning/k8s/01-innovation-minning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: innovation-minning
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: innovation-minning
  template:
    metadata:
      labels:
        app: innovation-minning
    spec:
      containers:
      - name: innovation-minning
        image: uhub.service.ucloud.cn/entropypool/innovation-minning:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: innovation-minning
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50210
    targetPort: 50210
  - name: grpc
    port: 50211
    targetPort: 50211
  - name: prometheus
    port: 50212
    targetPort: 50212
  selector:
    app: innovation-minning
