cmd/innovation-minning/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: innovation-minning-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: innovation-minning-npool
    k8s.kuboard.cn/workload: innovation-minning-npool
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-innovation-minning-prefix@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/innovation-minning
            backend:
              serviceName: innovation-minning
              servicePort: 50212
    - host: api.xpool.top
      http: *http_rules
    - host: www.npool.top
      http: *http_rules
    - host: www.xpool.top
      http: *http_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-innovation-minning-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/innovation-minning
